# DeadCrypt

./: .gitignore  CONTRIBUTING.md  README.md  decoder.py  encoder.py  pyproject.toml  readme.md  readme.md.txt  requirement.txt.txt  requirements.txt
.github/workflows/: ci.yml
deadcrypt/: __init__.py  cli.py  core.py  decoder.py  encoder.py
docs/: architecture.md
tests/: test_core.py  test_roundtrip.py
tools/: make_demo.py
