[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deadcrypt"
version = "1.0.0"
description = "Turn any file into lossless 'TV static' video and back, byte-for-byte."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dev Sharma" }]
keywords = ["steganography", "encoding", "video", "ffmpeg", "ffv1", "file-to-video"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "tqdm>=4.65",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/dev2180/DeadCrypt"
Repository = "https://github.com/dev2180/DeadCrypt"

[project.scripts]
deadcrypt = "deadcrypt.cli:main"

[tool.setuptools]
packages = ["deadcrypt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
